# threadshot

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  idea.md  package-lock.json  package.json  pyproject.toml  update.sh
app/: config.py  fetcher.py  main.py  renderer.py  routes.py  shotter.py
static/: styles.css  tailwind.css  tailwind.src.css
templates/: _layout.html.j2  about.html.j2  card.html.j2  error.html.j2  index.html.j2  privacy.html.j2  result.html.j2
tests/: test_fetcher.py  test_routes.py
