[project]
name = "threadshot"
version = "0.1.0"
description = "Screenshot Threads posts"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "jinja2>=3.1",
    "httpx>=0.27",
    "playwright>=1.48",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "slowapi>=0.1.9",
    "cachetools>=5.5",
    "python-multipart>=0.0.12",
    "selectolax>=0.3",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "respx>=0.21",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
